# dapp

./: .editorconfig  .gitignore  Cargo.toml  Makefile  global.0cd463cb.css  global.0cd463cb.css.map  index.html  package.json  readme.md  toolchain.toml
.cargo/: audit.toml
.docker/builder/: Dockerfile  builder.sh
.github/workflows/: contract.yml
asset/: manifest.webmanifest
demo/: package.json
demo/src/: config.js  index.html  index.js  utils.js
src/: identicon.rs  lib.rs
src/contract/: build.sh
src/contract/neatar/: Cargo.toml  identicon.rs  neatar.js  neatar.rs
src/web/: config.js  index.html  index.js  manifest.webmanifest  stylesheet.css  wallet.js
tests/integration/: decrement_simulate.rs  get_num_simulate.rs  increment_simulate.rs  main.rs  utils.rs
