[package]
name = "avatar"
version = "1.0.0-beta.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
test = true
doctest = false
bench = false
doc = false

[dependencies]
cid = "0.7.0"
near-sdk = "3.1.0"
near-contract-standards = "3.2.0"
hex = "0.4.3"
png = "0.16.8"
blake2-rfc = "0.2.18"
palette = "0.6.0"
base58 = "0.1.0"
svg = "0.10.0"
anyhow = "1.0.42"
base64 = "0.13.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
